<resources>
    <string name="app_name">Shows-Ivona-Mitovska</string>
    <string name="shows">Shows</string>
    <string name="list_shows">List shows</string>
    <string name="your_shows_are_not_showing_get_it">Your shows are not showing. Get it?</string>
    <string name="write_a_review">Write a review</string>
    <string name="no_reviews_yet">No reviews yet.</string>
    <string name="reviews">Reviews</string>
    <string name="comment">Comment</string>
    <string name="submit">Submit</string>
    <string name="write_review">Write a review</string>
    <string name="top_left_image_design">Top Left Image Design</string>
    <string name="top_right_image_design">Top Right Image Design</string>
    <string name="shows_logo_image">Shows Logo Image</string>
    <string name="login">Login</string>
    <string name="in_order_to_continue_please_log_in">In order to continue please log in</string>
    <string name="email">Email</string>
    <string name="hint_password">Password</string>
    <string name="image_for_a_show">Image for a show</string>
    <string name="image_placeholder">Image placeholder</string>
    <string name="close_review">Close Review</string>
    <string name="empty_list_text">Empty List</string>
    <string name="show_list_text">Shows List</string>
    <string name="empty_state_image">Empty State Image</string>
    <string name="close_review_button">Close Review Button</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="insert_rating">Please insert rating</string>
    <string name="log_out_button">Log out button</string>
    <string name="remember_me">Remember me</string>
    <string name="change_profile_photo">Change profile photo</string>
    <string name="logout">Logout</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="do_you_want_to_log_out">Do you want to log out?</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="register">Register</string>
    <string name="repeat_password">Repeat password</string>
    <string name="top_rated">Top rated</string>
    <string name="registration_successfull">Registration\nsuccessful!</string>
    <string name="show_image">Show Image</string>
    <string name="must_login">You must log in!</string>
    <string name="confirm">Confirm</string>
    <string name="quit_app">Do you want to quit app?</string>
    <string name="fail">fail</string>

</resources>